// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebViewScreen Instances FAQ matches snapshot 1`] = `
<iframe
  allowFullScreen={true}
  frameBorder="0"
  height="100%"
  onLoad={[Function]}
  seamless={true}
  src="https://community.gooddollar.org/faq"
  style={
    Object {
      "height": 0,
    }
  }
  title="FAQ"
  width="100%"
/>
`;

exports[`WebViewScreen Instances PrivacyPolicy matches snapshot 1`] = `
<iframe
  allowFullScreen={true}
  frameBorder="0"
  height="100%"
  onLoad={[Function]}
  seamless={true}
  src="https://www.gooddollar.org/privacy-policy/?gd-frame=1"
  style={
    Object {
      "height": 0,
    }
  }
  title="Privacy Policy"
  width="100%"
/>
`;

exports[`WebViewScreen Instances PrivacyPolicyAndTerms matches snapshot 1`] = `
<iframe
  allowFullScreen={true}
  frameBorder="0"
  height="100%"
  onLoad={[Function]}
  seamless={true}
  src="https://community.gooddollar.org/tou/"
  style={
    Object {
      "height": 0,
    }
  }
  title="Privacy Policy & Terms"
  width="100%"
/>
`;

exports[`WebViewScreen Instances Support matches snapshot 1`] = `
<iframe
  allowFullScreen={true}
  frameBorder="0"
  height="100%"
  onLoad={[Function]}
  seamless={true}
  src="https://help.gooddollar.org?transitioned=1"
  style={
    Object {
      "height": 0,
    }
  }
  title=" Help & Feedback"
  width="100%"
/>
`;

exports[`WebViewScreen Instances TermsOFUse matches snapshot 1`] = `
<iframe
  allowFullScreen={true}
  frameBorder="0"
  height="100%"
  onLoad={[Function]}
  seamless={true}
  src="https://www.gooddollar.org/terms-conditions/?gd-frame=1"
  style={
    Object {
      "height": 0,
    }
  }
  title="Terms Of Use"
  width="100%"
/>
`;
